# france_culture_scraping

./: .gitignore  data_scraper.py  pyproject.toml  readme.md
