[tool.poetry]
name = "france_culture_scraping"
version = "0.1.0"
description = ""
authors = ["Alex Kogi <Alexandrekogi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
pandas = "^1.4.2"
numpy = "^1.22.3"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
